--- a/posts/2020-06-25-task-management-with-roam-vol3.org
+++ b/posts/2020-06-25-task-management-with-roam-vol3.org
@@ -39,9 +39,12 @@ borrowed book, I just create a task for this.
   case Frodo doesn't wear socks. But how could it be? Everyone does!
 #+end_src
 
-*[2021-01-24 Sun]* Since some of the functionality mentioned in the original
-article was merged to =org-roam=, all code is updated to reflect the current
-state of affairs.
+*Change Log:*
+
+- [2021-01-24 Sun] Since some of the functionality mentioned in the original
+  article was merged to =org-roam=, all code is updated to reflect the current
+  state of affairs.
+- [2021-03-02 Tue]: Update naming convention to match [[https://github.com/d12frosted/environment/tree/master/emacs][personal configurations]].
 
 #+BEGIN_HTML
 <!--more-->
@@ -104,13 +107,13 @@ programmable exceptions) or the file with =TITLE= and =FILETAGS= being the same
 (with few programmable exceptions), I am feeling nervous. Especially since I am
 prone to mistakes.
 
-So what I do - I automate =FILETAGS=. I have a function
-=+org-notes-ensure-filetag= which automatically sets the =FILETAGS= buffer
-property for =org-roam= entries tagged as =People=. The following code reuses
-most of the functions from [[https://d12frosted.io/posts/2020-06-10-org-roam-tags.html][org-roam tags]] post.
+So what I do - I automate =FILETAGS=. I have a function =vulpea-ensure-filetag=
+which automatically sets the =FILETAGS= buffer property for =org-roam= entries
+tagged as =People=. The following code reuses most of the functions from
+[[https://d12frosted.io/posts/2020-06-10-org-roam-tags.html][org-roam tags]] post.
 
 #+begin_src emacs-lisp
-  (defun +org-notes-ensure-filetag ()
+  (defun vulpea-ensure-filetag ()
     "Add respective file tag if it's missing in the current note."
     (interactive)
     (let ((tags (org-roam--extract-tags-prop
@@ -121,23 +124,23 @@ most of the functions from [[https://d12frosted.io/posts/2020-06-10-org-roam-tag
                         '("FILETAGS"))))
         (org-roam--set-global-prop
          "FILETAGS"
-         (+org-notes--title-as-tag)))))
+         (vulpea--title-to-tag (vulpea-buffer-prop-get "TITLE"))))))
 
-  (defun +org-notes--title-as-tag ()
-    "Return title of the current note as tag."
-    (+org-notes--title-to-tag (+org-buffer-prop-get "TITLE")))
+  (defun vulpea--title-to-tag (title)
+    "Convert TITLE to tag."
+    (concat "@" (s-replace " " "" title)))
 #+end_src
 
 This function can be called interactively, but since I usually place the tag
-using =+org-notes-tags-add=, I just add the =+org-notes-ensure-filetag= to the
-end of that function.
+using =vulpea-tags-add=, I just add the =vulpea-ensure-filetag= to the end of
+that function.
 
 #+begin_src emacs-lisp
-  (defun +org-notes-tags-add ()
+  (defun vulpea-tags-add ()
     "Add a tag to current note."
     (interactive)
     (when (org-roam-tag-add)
-      (+org-notes-ensure-filetag)))
+      (vulpea-ensure-filetag)))
 #+end_src
 
 Though for other purposes one can put this function to the file visit hook. But
