--- a/posts/2021-01-16-task-management-with-roam-vol5.org
+++ b/posts/2021-01-16-task-management-with-roam-vol5.org
@@ -21,6 +21,10 @@ by dynamically building =org-agenda-files= list to include only files with
 =TODO= entries. All thanks to the power of =org-roam= and some hooks I am going
 to describe.
 
+*Change Log:*
+
+- [2021-03-02 Tue]: Update naming convention to match [[https://github.com/d12frosted/environment/tree/master/emacs][personal configurations]].
+
 #+BEGIN_HTML
 <!--more-->
 #+END_HTML
@@ -44,7 +48,7 @@ In order to mark a note as a =Project=, we need to check if it contains any
 parsing functions.
 
 #+begin_src emacs-lisp
-  (defun +org-notes-project-p ()
+  (defun vulpea-project-p ()
     "Return non-nil if current buffer has any todo entry.
 
   TODO entries marked as done are ignored, meaning the this
@@ -79,18 +83,18 @@ I think that it should be done in two places - when visiting a note and in
 entries.
 
 #+begin_src emacs-lisp
-  (add-hook 'find-file-hook #'+org-notes-project-update-tag)
-  (add-hook 'before-save-hook #'+org-notes-project-update-tag)
+  (add-hook 'find-file-hook #'vulpea-project-update-tag)
+  (add-hook 'before-save-hook #'vulpea-project-update-tag)
 
-  (defun +org-notes-project-update-tag ()
+  (defun vulpea-project-update-tag ()
     "Update PROJECT tag in the current buffer."
     (when (and (not (active-minibuffer-window))
-               (+org-notes-buffer-p))
+               (vulpea-buffer-p))
       (let* ((file (buffer-file-name (buffer-base-buffer)))
              (all-tags (org-roam--extract-tags file))
              (prop-tags (org-roam--extract-tags-prop file))
              (tags prop-tags))
-        (if (+org-notes-project-p)
+        (if (vulpea-project-p)
             (setq tags (cons "Project" tags))
           (setq tags (remove "Project" tags)))
         (unless (eq prop-tags tags)
@@ -98,7 +102,7 @@ entries.
            "ROAM_TAGS"
            (combine-and-quote-strings (seq-uniq tags)))))))
 
-  (defun +org-notes-buffer-p ()
+  (defun vulpea-buffer-p ()
     "Return non-nil if the currently visited buffer is a note."
     (and buffer-file-name
          (string-prefix-p
@@ -126,7 +130,7 @@ convenient function =org-roam-db-query= to execute SQL statements against
 =org-roam-db-location= file.
 
 #+begin_src emacs-lisp
-  (defun +org-notes-project-files ()
+  (defun vulpea-project-files ()
     "Return a list of note files containing Project tag."
     (seq-map
      #'car
@@ -149,7 +153,7 @@ simple use case. The query is run against the following scheme:
 Now we can set the list of agenda files:
 
 #+begin_src emacs-lisp
-  (setq org-agenda-files (+org-notes-project-files))
+  (setq org-agenda-files (vulpea-project-files))
 #+end_src
 
 But the real question is - when to do it? Some might put it in the =init.el=
@@ -158,11 +162,11 @@ argue that it's not the best place to do it. Because we need an up to date list
 of files exactly when we build agenda.
 
 #+begin_src emacs-lisp
-  (defun +agenda-files-update (&rest _)
+  (defun vulpea-agenda-files-update (&rest _)
     "Update the value of `org-agenda-files'."
-    (setq org-agenda-files (+org-notes-project-files)))
+    (setq org-agenda-files (vulpea-project-files)))
 
-  (advice-add 'org-agenda :before #'+agenda-files-update)
+  (advice-add 'org-agenda :before #'vulpea-agenda-files-update)
 #+end_src
 
 And that's all. You =org-agenda= is up to date and fast again!
@@ -178,7 +182,7 @@ update state of =Project= tag. Fortunately, this task is easily automated.
     (message "processing %s" file)
     (with-current-buffer (or (find-buffer-visiting file)
                              (find-file-noselect file))
-      (+org-notes-project-update-tag)
+      (vulpea-project-update-tag)
       (save-buffer)))
 #+end_src
 
@@ -201,7 +205,7 @@ For you convenience, the full code is displayed below. It is also available as
 [[https://gist.github.com/d12frosted/a60e8ccb9aceba031af243dff0d19b2e][GitHub Gist]].
 
 #+begin_src emacs-lisp
-  (defun +org-notes-project-p ()
+  (defun vulpea-project-p ()
     "Return non-nil if current buffer has any todo entry.
 
   TODO entries marked as done are ignored, meaning the this
@@ -216,15 +220,15 @@ For you convenience, the full code is displayed below. It is also available as
        (lambda (h)
          (org-element-property :todo-type h)))))
 
-  (defun +org-notes-project-update-tag ()
+  (defun vulpea-project-update-tag ()
     "Update PROJECT tag in the current buffer."
     (when (and (not (active-minibuffer-window))
-               (+org-notes-buffer-p))
+               (vulpea-buffer-p))
       (let* ((file (buffer-file-name (buffer-base-buffer)))
              (all-tags (org-roam--extract-tags file))
              (prop-tags (org-roam--extract-tags-prop file))
              (tags prop-tags))
-        (if (+org-notes-project-p)
+        (if (vulpea-project-p)
             (setq tags (cons "Project" tags))
           (setq tags (remove "Project" tags)))
         (unless (eq prop-tags tags)
@@ -232,14 +236,14 @@ For you convenience, the full code is displayed below. It is also available as
            "ROAM_TAGS"
            (combine-and-quote-strings (seq-uniq tags)))))))
 
-  (defun +org-notes-buffer-p ()
+  (defun vulpea-buffer-p ()
     "Return non-nil if the currently visited buffer is a note."
     (and buffer-file-name
          (string-prefix-p
           (expand-file-name (file-name-as-directory org-roam-directory))
           (file-name-directory buffer-file-name))))
 
-  (defun +org-notes-project-files ()
+  (defun vulpea-project-files ()
     "Return a list of note files containing Project tag."
     (seq-map
      #'car
@@ -248,14 +252,14 @@ For you convenience, the full code is displayed below. It is also available as
        :from tags
        :where (like tags (quote "%\"Project\"%"))])))
 
-  (defun +agenda-files-update (&rest _)
+  (defun vulpea-agenda-files-update (&rest _)
     "Update the value of `org-agenda-files'."
-    (setq org-agenda-files (+org-notes-project-files)))
+    (setq org-agenda-files (vulpea-project-files)))
 
-  (add-hook 'find-file-hook #'+org-notes-project-update-tag)
-  (add-hook 'before-save-hook #'+org-notes-project-update-tag)
+  (add-hook 'find-file-hook #'vulpea-project-update-tag)
+  (add-hook 'before-save-hook #'vulpea-project-update-tag)
 
-  (advice-add 'org-agenda :before #'+agenda-files-update)
+  (advice-add 'org-agenda :before #'vulpea-agenda-files-update)
 #+end_src
 
 Thank you for your patience.
