--- a/posts/2020-06-25-task-management-with-roam-vol3.org
+++ b/posts/2020-06-25-task-management-with-roam-vol3.org
@@ -41,10 +41,10 @@ borrowed book, I just create a task for this.
 
 *Change Log:*
 
-- [2021-01-24 Sun] Since some of the functionality mentioned in the original
+- ~[2021-01-24 Sun]~: Since some of the functionality mentioned in the original
   article was merged to =org-roam=, all code is updated to reflect the current
   state of affairs.
-- [2021-03-02 Tue]: Update naming convention to match [[https://github.com/d12frosted/environment/tree/master/emacs][personal configurations]].
+- ~[2021-03-02 Tue]~: Update naming convention to match [[https://github.com/d12frosted/environment/tree/master/emacs][personal configurations]].
 
 #+BEGIN_HTML
 <!--more-->
