--- a/posts/2021-01-16-task-management-with-roam-vol5.org
+++ b/posts/2021-01-16-task-management-with-roam-vol5.org
@@ -23,8 +23,8 @@ to describe.
 
 *Change Log:*
 
-- [2021-03-02 Tue]: Update naming convention to match [[https://github.com/d12frosted/environment/tree/master/emacs][personal configurations]].
-- [2021-03-08 Mon]: [[https://github.com/Whil-][Gustav]] shared that =org-element-map= has an optional
+- ~[2021-03-02 Tue]~: Update naming convention to match [[https://github.com/d12frosted/environment/tree/master/emacs][personal configurations]].
+- ~[2021-03-08 Mon]~: [[https://github.com/Whil-][Gustav]] shared that =org-element-map= has an optional
   parameter =first-match= that works like =seq-find=, meaning that
   =vulpea-project-p= can be optimised.
 
